Fix package setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = kumisms
-version = 0.1
+version = 0.1.1
 description = Class to interact with KumiSMS
 long_description = file: README.md
 url = https://kumig.it/kumisystems/pykumisms
@@ -18,3 +18,7 @@ classifiers =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+
+[options]
+include_package_data = true
+packages = find:
